<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:textSize="14sp"
        android:textStyle="italic|bold"
        android:textColor="@color/colorPrimary"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/departure_station_title"/>

    <EditText
        android:id="@+id/departure_station_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic"
        android:hint="@string/enter_station_name"/>
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="right"-->
        <!--android:orientation="horizontal">-->
    <!--<TextView-->
        <!--android:id="@+id/city_of_departute_station_title"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textStyle="italic"-->
        <!--android:textSize="14sp"-->
        <!--android:text="@string/city_title"/>-->
        <!--<TextView-->
            <!--android:id="@+id/city_of_departute_station"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textStyle="italic"-->
            <!--android:textSize="14sp"-->
            <!--android:text="@string/city_title"/>-->
    <!--</LinearLayout>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:enabled="false"
        android:textSize="14sp"
        android:textStyle="italic|bold"
        android:textColor="@color/colorPrimary"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/arrivel_station_title"/>

    <EditText
        android:id="@+id/arrivel_station_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic"
        android:hint="@string/enter_station_name"/>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="right"-->
        <!--android:orientation="horizontal">-->
        <!--<TextView-->
            <!--android:id="@+id/city_of_arrivel_station_title"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textStyle="italic"-->
            <!--android:textSize="14sp"-->
            <!--android:text="@string/city_title"/>-->
        <!--<TextView-->
            <!--android:id="@+id/city_of_arrivel_station"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textStyle="italic"-->
            <!--android:textSize="14sp"-->
            <!--android:text="@string/city_title"/>-->
    <!--</LinearLayout>-->


    <EditText
        android:id="@+id/date_pick_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:hint="@string/choose_date"
        android:inputType="date" />


</LinearLayout>