<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/station_info_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="16sp"
           android:textColor="@color/colorPrimary"
           android:textStyle="italic|bold"
           android:text="Название:"/>
        <TextView
            android:id="@+id/info_station_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:text="Название:"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/info_station_city_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Название:"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/info_station_country_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/country_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:text="@string/region_title"/>

        <TextView
            android:id="@+id/info_station_region_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="italic"
            android:text="@string/region_title"/>

    </LinearLayout>


</LinearLayout>